asset-manager issue #31 WIP use a test policy